重要更改，珞石sdk仅由robot control持有
